force-app/main/default/objects/Client__c/fields/Grooming_Appointment_Points__c.field-meta.xml
<CustomField>
    <fullName>Grooming_Appointment_Points__c</fullName>
    <description>Total number of points accumulated by this customer from grooming appointments.</description>
    <inlineHelpText>Your total number of points from grooming appointments, counted across all pets.</inlineHelpText>
    <label>Grooming Appointment Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>