force-app/main/default/objects/Client__c/fields/Hotel_Points__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Points__c</fullName>
    <description>Total number of pet hotel points accumulated by this customer, across all pets.</description>
    <inlineHelpText>Your total number of pet hotel points, across all pets.</inlineHelpText>
    <label>Hotel Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>