force-app/main/default/objects/Client__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Platform user profile for this client.</description>
    <inlineHelpText>Platform user profile for this client.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>